增加工厂配比计算

--- a/Factorio_Quality_Producing_Model.ipynb
+++ b/Factorio_Quality_Producing_Model.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "1b053ea8-7b6c-4e9b-9209-cb2ca2cb4024",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Factorio 品质优化建模"
    ]
@@ -29,9 +27,7 @@
   {
    "cell_type": "markdown",
    "id": "5c5f011e-9c05-4dd9-b428-a6b955b8c2dc",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 基础设定"
    ]
@@ -39,9 +35,7 @@
   {
    "cell_type": "markdown",
    "id": "48bf134a-b162-4836-80b1-10d6f5b6de0b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 参数设定"
    ]
@@ -89,9 +83,7 @@
   {
    "cell_type": "markdown",
    "id": "94a580d9-6d98-401e-b329-df659f6fda7a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 转换矩阵"
    ]
@@ -302,9 +294,7 @@
   {
    "cell_type": "markdown",
    "id": "fdf2d132-45f0-490f-8015-456679143a20",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 几种优化途径"
    ]
@@ -312,9 +302,7 @@
   {
    "cell_type": "markdown",
    "id": "b9a97e66-aedf-4c81-ae3b-cf3366478d58",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 星岩再处理\n",
     "- $O_{i+1} = O_i T_b$"
@@ -346,9 +334,7 @@
   {
    "cell_type": "markdown",
    "id": "7201396a-eadc-40dc-8d8d-09ddecbdf8f0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 回收得到自身\n",
     "- $O_{i+1} = O_i T_r(P_L=1) = O_i T_R$"
@@ -381,9 +367,7 @@
   {
    "cell_type": "markdown",
    "id": "2e7847a8-ee0e-4db8-a5b4-96baab17bbe7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 作为产物优化(分-合)\n",
     "- 作为产物优化时，原料全部合成，而传说级产物不再分解，有$A_1 = 0, A_2 = A, T_p=T_p(P_L=P_M), T_r=T_r(P_L=0)$, 其中$P_M$为该机器的最大产能\n",
@@ -426,9 +410,7 @@
   {
    "cell_type": "markdown",
    "id": "b4dee46d-efd6-4fa3-97b2-ff05b2ccd187",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 作为原料优化(合-分)\n",
     "- 作为原料优化时，产物全部分解一次，但传说级材料不再合成, 有 $A_1 = A, A_2 = 0, T_p = T_p(P_L=0), T_r = T_r(P_L=0.25)$\n",
@@ -470,9 +452,7 @@
   {
    "cell_type": "markdown",
    "id": "be2cc102-05f3-448f-8f57-05992e78aa56",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 注意到\n",
     "$$T_O - T_I = \\begin{bmatrix}\n",
@@ -511,9 +491,7 @@
   {
    "cell_type": "markdown",
    "id": "9c6b331c-5f8e-4584-aa52-fdb79de2b966",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 转化率"
    ]
@@ -521,9 +499,7 @@
   {
    "cell_type": "markdown",
    "id": "21ad83d2-10e7-4fc8-bde7-73f61cd7203f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 定义\n",
     "- 合-分式定义状态为$X_i = I_i$, 其它情况下定义$X_i = O_i$\n",
@@ -631,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "261b2c17-d75a-4c9e-99ca-15fde8793092",
    "metadata": {},
    "outputs": [],
@@ -643,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "40e223b8-f1a2-4a6d-975e-885af51fe3c0",
    "metadata": {},
    "outputs": [],
@@ -654,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "3587c08e-7c9c-406c-b0e2-2f0582857550",
    "metadata": {},
    "outputs": [],
@@ -665,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "c2c55df8-ccbe-4172-856d-18ea4c03a8a4",
    "metadata": {},
    "outputs": [],
@@ -675,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "44210937-d369-47eb-8137-b7f5fe09fedc",
    "metadata": {},
    "outputs": [
@@ -975,9 +951,7 @@
   {
    "cell_type": "markdown",
    "id": "30cb640b-e997-4c13-9935-11542da2e38d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 生产速率"
    ]
@@ -1101,7 +1075,7 @@
    "id": "3cb0fac1-27cc-4ee3-9592-a473b62e46fe",
    "metadata": {},
    "source": [
-    "## 单位物品的处理时间\n",
+    "## 单位输入的处理时间\n",
     "- 由于总可以通过增加工厂的方式增加绝对生产速度，因此在此只讨论每个品质等级都只用1个工厂时的情况\n",
     "- 每个合成配方有各自基础的合成时间，除以对应的原料/产物数，可得单位输入所需合成时间$\\tau_0$\n",
     "- 不同工厂有不同基础速度倍率$k_f$\n",
@@ -1130,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "id": "a964b627-695e-45e7-aee7-62de51942be4",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "id": "65beb2f0-41f7-489c-a281-8fef9dc8b159",
    "metadata": {},
    "outputs": [],
@@ -1152,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "id": "d3ab3be7-ef96-4206-b2f5-2999454560b4",
    "metadata": {},
    "outputs": [],
@@ -1162,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "id": "5728659a-b365-4147-a498-295e123f3c87",
    "metadata": {},
    "outputs": [
@@ -1451,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "b3d4a3ab-d847-4a47-affb-28a1b43eddfc",
    "metadata": {},
    "outputs": [
@@ -1729,9 +1703,303 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0be3cc48-fe7a-40dc-ab23-77ed2d2f04c2",
+   "metadata": {},
+   "source": [
+    "### 各级工厂配比\n",
+    "- $单个工厂处理效率 = 基础生产效率 \\times 品级加成 \\times max(1 + 插件总加成, 0.2)$\n",
+    "- 特别地，装备4个顶级品质插件的传说级回收机效率视为 $(0.5 \\times 16) \\times 2.5 \\times (1-0.05*4) = 16$, 注意它的输入为$总生产效率 \\times 产能P$\n",
+    "- 由于单个工厂可能具有不同的品级和插件配置，导致效率各不相同，在此只按各级的输入量计算各级工厂所需生产效率的比\n",
+    "- 每行的和归一化为 $16/P$, 此时 $各级在效率比中的值 / 各级单个工厂处理效率$ 就正好是单个前述回收机对应的工厂数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "a67c4f32-e870-413c-84e0-d3817bf0c0f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"9\" halign=\"left\">0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Q</th>\n",
+       "      <th>0.0000</th>\n",
+       "      <th>0.0625</th>\n",
+       "      <th>0.1250</th>\n",
+       "      <th>0.1875</th>\n",
+       "      <th>0.2500</th>\n",
+       "      <th>0.3125</th>\n",
+       "      <th>0.3750</th>\n",
+       "      <th>0.4375</th>\n",
+       "      <th>0.5000</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>14.8∣1.0∣0.2∣0.0</td>\n",
+       "      <td>14.6∣1.1∣0.3∣0.1</td>\n",
+       "      <td>14.4∣1.2∣0.3∣0.1</td>\n",
+       "      <td>14.2∣1.3∣0.4∣0.1</td>\n",
+       "      <td>14.0∣1.4∣0.5∣0.1</td>\n",
+       "      <td>13.8∣1.5∣0.5∣0.2</td>\n",
+       "      <td>13.7∣1.5∣0.6∣0.2</td>\n",
+       "      <td>13.5∣1.6∣0.7∣0.2</td>\n",
+       "      <td>13.3∣1.7∣0.7∣0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.25</th>\n",
+       "      <td>11.5∣1.1∣0.2∣0.0</td>\n",
+       "      <td>11.3∣1.1∣0.3∣0.1</td>\n",
+       "      <td>11.1∣1.2∣0.4∣0.1</td>\n",
+       "      <td>10.9∣1.3∣0.4∣0.1</td>\n",
+       "      <td>10.7∣1.4∣0.5∣0.2</td>\n",
+       "      <td>10.6∣1.4∣0.6∣0.2</td>\n",
+       "      <td>10.4∣1.5∣0.7∣0.2</td>\n",
+       "      <td>10.3∣1.6∣0.7∣0.3</td>\n",
+       "      <td>10.1∣1.6∣0.8∣0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.50</th>\n",
+       "      <td>9.3∣1.1∣0.2∣0.1</td>\n",
+       "      <td>9.1∣1.2∣0.3∣0.1</td>\n",
+       "      <td>8.9∣1.2∣0.4∣0.1</td>\n",
+       "      <td>8.7∣1.3∣0.5∣0.2</td>\n",
+       "      <td>8.5∣1.4∣0.6∣0.2</td>\n",
+       "      <td>8.4∣1.4∣0.6∣0.2</td>\n",
+       "      <td>8.2∣1.5∣0.7∣0.3</td>\n",
+       "      <td>8.1∣1.5∣0.8∣0.3</td>\n",
+       "      <td>7.9∣1.6∣0.8∣0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.75</th>\n",
+       "      <td>7.7∣1.1∣0.3∣0.1</td>\n",
+       "      <td>7.5∣1.2∣0.4∣0.1</td>\n",
+       "      <td>7.3∣1.3∣0.5∣0.2</td>\n",
+       "      <td>7.1∣1.3∣0.5∣0.2</td>\n",
+       "      <td>6.9∣1.4∣0.6∣0.2</td>\n",
+       "      <td>6.8∣1.4∣0.7∣0.3</td>\n",
+       "      <td>6.6∣1.4∣0.7∣0.3</td>\n",
+       "      <td>6.5∣1.5∣0.8∣0.4</td>\n",
+       "      <td>6.4∣1.5∣0.8∣0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.00</th>\n",
+       "      <td>6.4∣1.2∣0.3∣0.1</td>\n",
+       "      <td>6.2∣1.2∣0.4∣0.1</td>\n",
+       "      <td>6.0∣1.3∣0.5∣0.2</td>\n",
+       "      <td>5.9∣1.3∣0.6∣0.2</td>\n",
+       "      <td>5.7∣1.3∣0.7∣0.3</td>\n",
+       "      <td>5.6∣1.4∣0.7∣0.3</td>\n",
+       "      <td>5.5∣1.4∣0.8∣0.4</td>\n",
+       "      <td>5.3∣1.4∣0.8∣0.4</td>\n",
+       "      <td>5.2∣1.4∣0.9∣0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.25</th>\n",
+       "      <td>5.4∣1.2∣0.4∣0.1</td>\n",
+       "      <td>5.2∣1.2∣0.5∣0.2</td>\n",
+       "      <td>5.1∣1.3∣0.6∣0.2</td>\n",
+       "      <td>4.9∣1.3∣0.6∣0.3</td>\n",
+       "      <td>4.8∣1.3∣0.7∣0.3</td>\n",
+       "      <td>4.6∣1.3∣0.8∣0.4</td>\n",
+       "      <td>4.5∣1.4∣0.8∣0.4</td>\n",
+       "      <td>4.4∣1.4∣0.9∣0.5</td>\n",
+       "      <td>4.3∣1.4∣0.9∣0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.50</th>\n",
+       "      <td>4.6∣1.2∣0.4∣0.2</td>\n",
+       "      <td>4.4∣1.2∣0.5∣0.2</td>\n",
+       "      <td>4.2∣1.3∣0.6∣0.3</td>\n",
+       "      <td>4.1∣1.3∣0.7∣0.3</td>\n",
+       "      <td>4.0∣1.3∣0.7∣0.4</td>\n",
+       "      <td>3.9∣1.3∣0.8∣0.4</td>\n",
+       "      <td>3.8∣1.3∣0.8∣0.5</td>\n",
+       "      <td>3.7∣1.3∣0.9∣0.5</td>\n",
+       "      <td>3.6∣1.3∣0.9∣0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.75</th>\n",
+       "      <td>3.9∣1.2∣0.5∣0.2</td>\n",
+       "      <td>3.7∣1.2∣0.6∣0.3</td>\n",
+       "      <td>3.5∣1.2∣0.7∣0.4</td>\n",
+       "      <td>3.4∣1.3∣0.7∣0.4</td>\n",
+       "      <td>3.3∣1.3∣0.8∣0.5</td>\n",
+       "      <td>3.2∣1.3∣0.8∣0.5</td>\n",
+       "      <td>3.1∣1.3∣0.9∣0.6</td>\n",
+       "      <td>3.1∣1.3∣0.9∣0.6</td>\n",
+       "      <td>3.0∣1.3∣0.9∣0.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.00</th>\n",
+       "      <td>3.2∣1.2∣0.6∣0.3</td>\n",
+       "      <td>3.1∣1.2∣0.7∣0.4</td>\n",
+       "      <td>2.9∣1.2∣0.7∣0.4</td>\n",
+       "      <td>2.8∣1.2∣0.8∣0.5</td>\n",
+       "      <td>2.8∣1.2∣0.8∣0.5</td>\n",
+       "      <td>2.7∣1.2∣0.9∣0.6</td>\n",
+       "      <td>2.6∣1.2∣0.9∣0.6</td>\n",
+       "      <td>2.6∣1.2∣0.9∣0.7</td>\n",
+       "      <td>2.5∣1.2∣0.9∣0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.25</th>\n",
+       "      <td>2.6∣1.2∣0.7∣0.4</td>\n",
+       "      <td>2.5∣1.2∣0.8∣0.5</td>\n",
+       "      <td>2.4∣1.2∣0.8∣0.5</td>\n",
+       "      <td>2.3∣1.2∣0.8∣0.6</td>\n",
+       "      <td>2.3∣1.1∣0.9∣0.6</td>\n",
+       "      <td>2.2∣1.1∣0.9∣0.7</td>\n",
+       "      <td>2.2∣1.1∣0.9∣0.7</td>\n",
+       "      <td>2.1∣1.1∣0.9∣0.7</td>\n",
+       "      <td>2.1∣1.1∣0.9∣0.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.50</th>\n",
+       "      <td>2.1∣1.2∣0.8∣0.5</td>\n",
+       "      <td>2.0∣1.1∣0.8∣0.6</td>\n",
+       "      <td>1.9∣1.1∣0.9∣0.7</td>\n",
+       "      <td>1.9∣1.1∣0.9∣0.7</td>\n",
+       "      <td>1.9∣1.1∣0.9∣0.7</td>\n",
+       "      <td>1.8∣1.1∣0.9∣0.8</td>\n",
+       "      <td>1.8∣1.1∣0.9∣0.8</td>\n",
+       "      <td>1.8∣1.0∣0.9∣0.8</td>\n",
+       "      <td>1.8∣1.0∣0.9∣0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.75</th>\n",
+       "      <td>1.5∣1.1∣0.9∣0.7</td>\n",
+       "      <td>1.5∣1.1∣0.9∣0.8</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.8</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.8</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.8</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.8</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.9</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.9</td>\n",
+       "      <td>1.5∣1.0∣0.9∣0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.00</th>\n",
+       "      <td>1.1∣1.0∣1.0∣1.0</td>\n",
+       "      <td>1.1∣1.0∣1.0∣1.0</td>\n",
+       "      <td>1.2∣0.9∣1.0∣1.0</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "      <td>1.2∣0.9∣0.9∣0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     0                                                        \\\n",
+       "Q               0.0000            0.0625            0.1250            0.1875   \n",
+       "P                                                                              \n",
+       "1.00  14.8∣1.0∣0.2∣0.0  14.6∣1.1∣0.3∣0.1  14.4∣1.2∣0.3∣0.1  14.2∣1.3∣0.4∣0.1   \n",
+       "1.25  11.5∣1.1∣0.2∣0.0  11.3∣1.1∣0.3∣0.1  11.1∣1.2∣0.4∣0.1  10.9∣1.3∣0.4∣0.1   \n",
+       "1.50   9.3∣1.1∣0.2∣0.1   9.1∣1.2∣0.3∣0.1   8.9∣1.2∣0.4∣0.1   8.7∣1.3∣0.5∣0.2   \n",
+       "1.75   7.7∣1.1∣0.3∣0.1   7.5∣1.2∣0.4∣0.1   7.3∣1.3∣0.5∣0.2   7.1∣1.3∣0.5∣0.2   \n",
+       "2.00   6.4∣1.2∣0.3∣0.1   6.2∣1.2∣0.4∣0.1   6.0∣1.3∣0.5∣0.2   5.9∣1.3∣0.6∣0.2   \n",
+       "2.25   5.4∣1.2∣0.4∣0.1   5.2∣1.2∣0.5∣0.2   5.1∣1.3∣0.6∣0.2   4.9∣1.3∣0.6∣0.3   \n",
+       "2.50   4.6∣1.2∣0.4∣0.2   4.4∣1.2∣0.5∣0.2   4.2∣1.3∣0.6∣0.3   4.1∣1.3∣0.7∣0.3   \n",
+       "2.75   3.9∣1.2∣0.5∣0.2   3.7∣1.2∣0.6∣0.3   3.5∣1.2∣0.7∣0.4   3.4∣1.3∣0.7∣0.4   \n",
+       "3.00   3.2∣1.2∣0.6∣0.3   3.1∣1.2∣0.7∣0.4   2.9∣1.2∣0.7∣0.4   2.8∣1.2∣0.8∣0.5   \n",
+       "3.25   2.6∣1.2∣0.7∣0.4   2.5∣1.2∣0.8∣0.5   2.4∣1.2∣0.8∣0.5   2.3∣1.2∣0.8∣0.6   \n",
+       "3.50   2.1∣1.2∣0.8∣0.5   2.0∣1.1∣0.8∣0.6   1.9∣1.1∣0.9∣0.7   1.9∣1.1∣0.9∣0.7   \n",
+       "3.75   1.5∣1.1∣0.9∣0.7   1.5∣1.1∣0.9∣0.8   1.5∣1.0∣0.9∣0.8   1.5∣1.0∣0.9∣0.8   \n",
+       "4.00   1.1∣1.0∣1.0∣1.0   1.1∣1.0∣1.0∣1.0   1.2∣0.9∣1.0∣1.0   1.2∣0.9∣0.9∣0.9   \n",
+       "\n",
+       "                                                                              \\\n",
+       "Q               0.2500            0.3125            0.3750            0.4375   \n",
+       "P                                                                              \n",
+       "1.00  14.0∣1.4∣0.5∣0.1  13.8∣1.5∣0.5∣0.2  13.7∣1.5∣0.6∣0.2  13.5∣1.6∣0.7∣0.2   \n",
+       "1.25  10.7∣1.4∣0.5∣0.2  10.6∣1.4∣0.6∣0.2  10.4∣1.5∣0.7∣0.2  10.3∣1.6∣0.7∣0.3   \n",
+       "1.50   8.5∣1.4∣0.6∣0.2   8.4∣1.4∣0.6∣0.2   8.2∣1.5∣0.7∣0.3   8.1∣1.5∣0.8∣0.3   \n",
+       "1.75   6.9∣1.4∣0.6∣0.2   6.8∣1.4∣0.7∣0.3   6.6∣1.4∣0.7∣0.3   6.5∣1.5∣0.8∣0.4   \n",
+       "2.00   5.7∣1.3∣0.7∣0.3   5.6∣1.4∣0.7∣0.3   5.5∣1.4∣0.8∣0.4   5.3∣1.4∣0.8∣0.4   \n",
+       "2.25   4.8∣1.3∣0.7∣0.3   4.6∣1.3∣0.8∣0.4   4.5∣1.4∣0.8∣0.4   4.4∣1.4∣0.9∣0.5   \n",
+       "2.50   4.0∣1.3∣0.7∣0.4   3.9∣1.3∣0.8∣0.4   3.8∣1.3∣0.8∣0.5   3.7∣1.3∣0.9∣0.5   \n",
+       "2.75   3.3∣1.3∣0.8∣0.5   3.2∣1.3∣0.8∣0.5   3.1∣1.3∣0.9∣0.6   3.1∣1.3∣0.9∣0.6   \n",
+       "3.00   2.8∣1.2∣0.8∣0.5   2.7∣1.2∣0.9∣0.6   2.6∣1.2∣0.9∣0.6   2.6∣1.2∣0.9∣0.7   \n",
+       "3.25   2.3∣1.1∣0.9∣0.6   2.2∣1.1∣0.9∣0.7   2.2∣1.1∣0.9∣0.7   2.1∣1.1∣0.9∣0.7   \n",
+       "3.50   1.9∣1.1∣0.9∣0.7   1.8∣1.1∣0.9∣0.8   1.8∣1.1∣0.9∣0.8   1.8∣1.0∣0.9∣0.8   \n",
+       "3.75   1.5∣1.0∣0.9∣0.8   1.5∣1.0∣0.9∣0.8   1.5∣1.0∣0.9∣0.9   1.5∣1.0∣0.9∣0.9   \n",
+       "4.00   1.2∣0.9∣0.9∣0.9   1.2∣0.9∣0.9∣0.9   1.2∣0.9∣0.9∣0.9   1.2∣0.9∣0.9∣0.9   \n",
+       "\n",
+       "                        \n",
+       "Q               0.5000  \n",
+       "P                       \n",
+       "1.00  13.3∣1.7∣0.7∣0.3  \n",
+       "1.25  10.1∣1.6∣0.8∣0.3  \n",
+       "1.50   7.9∣1.6∣0.8∣0.3  \n",
+       "1.75   6.4∣1.5∣0.8∣0.4  \n",
+       "2.00   5.2∣1.4∣0.9∣0.5  \n",
+       "2.25   4.3∣1.4∣0.9∣0.5  \n",
+       "2.50   3.6∣1.3∣0.9∣0.6  \n",
+       "2.75   3.0∣1.3∣0.9∣0.6  \n",
+       "3.00   2.5∣1.2∣0.9∣0.7  \n",
+       "3.25   2.1∣1.1∣0.9∣0.7  \n",
+       "3.50   1.8∣1.0∣0.9∣0.8  \n",
+       "3.75   1.5∣1.0∣0.9∣0.9  \n",
+       "4.00   1.2∣0.9∣0.9∣0.9  "
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df12 = df1.apply(lambda row: '\\u2223'.join(f'{x:.1f}' for x in row / row.sum() * (16/row.name[0])), axis=1) # 比号\\u2236超宽了\n",
+    "df12.reset_index().pivot(index='P', columns='Q')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67c4f32-e870-413c-84e0-d3817bf0c0f5",
+   "id": "b40bb192-ff62-458a-aa8f-a45ed8de3e81",
    "metadata": {},
    "outputs": [],
    "source": []
