--- a/Robots_Throughput.ipynb
+++ b/Robots_Throughput.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "## 1. 能耗\n",
     "- 将单位时间能耗也折算为距离，则机器人实际单位距离能耗为$P_S = P_t / v + P_s$。`科技：作业机器人速度`只需达到5级，前者便已不足后者的10%。因此随着该科技的提升，在近似计算中可以忽略前者，认为 $P_S \\approx P_s = 5 kJ/m$\n",
-    "- 此时机器人最大搬运距离 $S_{max} = 0.8A / P$, 普通级为`240 m`, 传说级为`1440 m`\n",
+    "- 此时机器人最大搬运距离 $S_{max} = 0.8A / P_S$, 普通级为`240 m`, 传说级为`1440 m`\n",
     "- 若将单位距离能耗折算为时间，则$P_T = P_t + P_s \\cdot v \\approx P_s v$"
    ]
   },
@@ -68,8 +68,8 @@
     "## 2. 运载效率\n",
     "- 假设在繁忙情况下，充满电的机器人一次完整的行程为 $C_1 \\xrightarrow{空载} A_1 \\xrightarrow{满载} B_1 \\xrightarrow{空载} A_2 \\xrightarrow{满载} B_2 \\dots \\rightarrow C_2$，其中$A_i$为货物来源，$B_i$为货物目的，$C_i$为充电站。记满载行程占总行程的比例为$K$, 则\n",
     "$$K = \\frac{\\sum A_i B_i}{C_1 A_1 + \\sum A_i B_i + \\sum B_i A_{i+1}} = \\frac{S_满}{S_充 + S_满 + S_空}$$\n",
-    "  其中$S_充 + S_满 + S_空 \\approx  S_{max}$，最后一段$X_n\\rightarrow C_2$不计，因为机器人是在此之前电量跌下$20\\% A$\n",
-    "- $K$也可以视为机器人对能量利用的效率。可以看出，在产线不变的情况下，充电站离供货箱越近、机器人蓄电量越高（品质越高），能量利用率越高。\n",
+    "- 由于机器人电量消耗80%后就需前往充电，故$S_充 + S_满 + S_空 \\approx  S_{max} = 0.8A / P_S$，而最后一段$X_n\\rightarrow C_2$不应计入行程\n",
+    "- $K$也可以视为机器人对能量利用的效率。可以看出，在产线不变的情况下，充电站离供货箱越近、机器人品质提高（蓄电量提高），可以有效减小$S_充$的占比，使能量利用率提高。\n",
     "- 近似估计$K$的范围：假定充电行程相对运载行程可以忽略不计，又由于平均情况下$B_i A_{i+1} \\le A_i B_i$（否则机器人直接在$A_i B_i$间往返效率更高），则有$0.5 \\le K \\lt 1$\n"
    ]
   },
@@ -79,9 +79,9 @@
    "metadata": {},
    "source": [
     "## 3. 单位时间总行程\n",
-    "- 统计产线在单位时间内消耗和生产出的每种物品数目为$n_i$，其需由机器人运输的距离为$d_i$，则产线在设计上就需要在单位时间内具有总运载量$N = \\sum n_i$（单位：件）和运载距离$D = \\sum n_i d_i$（单位：件·米）\n",
-    "- 考虑到机器人运载量为$n$，则需单位时间所有机器人的运载行程$S_满 = D/n$，总行程$S = S_满 / K = D / (n K)$\n",
-    "- 完成该行程$S$的总能耗为$P = P_S \\cdot S = (D (P_t / v + P_s))/(n K) \\approx (D P_s) / (n K)$"
+    "- 统计产线在生产稳定时单位时间内消耗和生产出的每种物品数目为$n_i$，各自需由机器人运输的距离为$d_i$，则产线在设计上就需要在单位时间内具有总运载量(即吞吐量) $N = \\sum n_i$（单位：件/秒）和运载距离$D = \\sum n_i d_i$（单位：件·米/秒）\n",
+    "- 定义 $ L = D / N = \\sum n_i d_i / \\sum n_i $ 为产线的`平均运载距离`，显然该值只与产线的物流箱布置有关，当产线成比例扩大或者提速时保持不变\n",
+    "- 考虑到机器人运载量为$n$，则需单位时间所有机器人的运载行程$S_满 = D/n$，总行程$S = S_满 / K = D / (n K)$\n"
    ]
   },
   {
@@ -89,12 +89,10 @@
    "id": "f0683081-1c0f-412d-91a4-b63722eb4be0",
    "metadata": {},
    "source": [
-    "## 4. 单位功率的运载量\n",
-    "- 反过来，在该产线上，每单位输入功率（即单位时间输入的单位能量）能达成的（平均）机器人运载量为 $M = N / P = (n K \\cdot N) / (D P_s)$\n",
-    "- 定义 $ L = D / N = \\sum n_i d_i / \\sum n_i $ 为产线的`平均运载距离`，则 $ M = (n K) / (L P_s) $\n",
-    "- 设该某区域有$N_C$台机器人指令中心向机器人提供充电，每台提供的总充电速率为$C_i$，则单位时间内其共可支撑 $M \\cdot \\sum C_i= (n K \\cdot \\sum C_i) / (L P_s)$ 的运载量\n",
-    "- 这也就是单位时间内该机器人指令平台布置在该产线上的运载量，可类比于传送带的吞吐量（吞吐速率）概念：\n",
-    "$$U = \\frac{n K \\sum C_i}{L P_s}$$"
+    "## 4. 输入功率与吞吐量\n",
+    "- 完成该行程$S$的需要的总能量为$P = P_S \\cdot S = (D P_S)/(n K)$\n",
+    "- 由于机器人电量消耗掉80%后就需前往充电，设设该某区域有$N_C$台机器人指令中心向机器人提供充电，每台提供的总充电功率为$C_i$，则单位时间内$P$应恰好等于80%的总充电功率$C( = \\sum C_i)$\n",
+    "- 再代入$D = L N$有 $P = 80\\% C = (L N P_S) / (n K)$, 即吞吐量 $$N = \\frac{80\\% C \\cdot n K}{L P_S} $$"
    ]
   },
   {
@@ -103,8 +101,8 @@
    "metadata": {},
    "source": [
     "# 讨论\n",
-    "- 式中$P_s$为定值，$L$与产线布置相关，$n$取决于`科技：作业机器人货物运量`，$\\sum C_i$与指令平台相关，$K$则与产线和指令平台的布置、机器人品质等因素均相关。\n",
-    "- 因此从以下3个方面进行讨论："
+    "- 式中：$L$与产线布置相关，$P_S$与`作业机器人速度`微弱相关但当速度充分大时几乎为定值，$C$与指令平台相关，$n$取决于`科技：作业机器人货物运量`，$K$则与产线和指令平台的布置、机器人品质等因素均相关。\n",
+    "- 因此从以下几个方面进行讨论："
    ]
   },
   {
@@ -123,7 +121,7 @@
    "metadata": {},
    "source": [
     "## 2. 机器人指令平台对吞吐量的影响\n",
-    "- 平台数量越多、品质越高，能提供的$\\sum C_i$越大，吞吐量将成正比地增加\n",
+    "- 平台数量越多、品质越高，能提供的$C$越大，吞吐量将成正比地增加\n",
     "- 但是，若平台距产线的供货箱太远即$S_充$相对$S_{max}$不可忽略，则$K$会显著减小，导致吞吐量下降"
    ]
   },
@@ -133,9 +131,9 @@
    "metadata": {},
    "source": [
     "## 3. 机器人的品质和相关科技对吞吐量的影响\n",
-    "- 本文中总是假设有充分的机器人参与运输。一般来讲，若要充分利用$\\sum C_i$的能量输入，至少需要的机器人数为$N_{robot} = (\\sum C_i) / P_T \\approx (\\sum C_i) / (P_s v)$\n",
+    "- 本文中总是假设有充分的机器人参与运输。一般来讲，若要充分利用$C$的能量输入，至少需要的机器人数为$N_{robot} = C / P_T \\approx C / (P_s v)$\n",
     "- 也即，`科技：作业机器人速度`等级越高，所需的机器人数量越少\n",
-    "- 机器人的品质可提升其蓄电量，使$S_充$相对$S_max$更小，从而增大机器人的能量利用率$K$，使吞吐量增大\n",
+    "- 机器人的品质可提升其蓄电量，使$S_充$相对$S_{max}$更小，从而增大机器人的能量利用率$K$，使吞吐量增大\n",
     "- `作业机器人货物运量`$n$直接正比例地提升吞吐量"
    ]
   },
@@ -145,15 +143,15 @@
    "metadata": {},
    "source": [
     "# 数量估算\n",
-    "- 假设产线中货物的`平均运载距离`$L = 10 m$；使用1台传说级机器人指令平台提供运输$\\sum C_i = 5 MW$；运载效率未经特别优化但通过指令平台布置和使用传说级机器人使得$S_充$可忽略不计；$n$点满为4；`作业机器人速度`和机器人数量均足够高：此时\n",
-    "$$U = \\frac{n K \\sum C_i}{L P_s} = \\frac{4 \\cdot 0.5 \\cdot 5 MW} {10 m \\cdot 5 kJ/m} = 200 /s $$\n",
-    "    即此条件下的吞吐量约为`200件/s`"
+    "- 假设产线中货物的`平均运载距离`$L = 10 m$；使用1台传说级机器人指令平台提供运输$C = 5 MW$；运载效率未经特别优化但通过指令平台布置和使用传说级机器人使得$S_充$可忽略不计；$n$点满为4；`作业机器人速度`和机器人数量均足够高：此时\n",
+    "$$U = \\frac{80\\% C n K}{L P_S} = \\frac{0.8 \\cdot 5MW \\cdot 4 \\cdot 0.5} {10 m \\cdot 5 kJ/m} = 160 /s $$\n",
+    "    即此条件下的吞吐量约为`160件/s`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd306853-f349-49cb-991d-123e4ca3d632",
+   "id": "d3697846-9558-46a2-9d41-054dd7664434",
    "metadata": {},
    "outputs": [],
    "source": []
